# telegram-client

./: .drone.yml  .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  build.txt  version.md
.github/workflows/: develop.yml  publish.yml
conf/: telegram-client.alpzin.toml  telegram-client.amiop.toml  telegram-client.amip.toml  telegram-client.ampd.toml  telegram-client.toml
examples/: client_async.rs  client_event.rs  config.rs  proxy.rs  rasync_aclr.rs  rasync_simple.rs  sample.rs  simple.rs  tclient.rs  tgfn.rs  thelp.rs  with_responses.rs
examples/async_client/: config.rs  main.rs  tgfn.rs  thelp.rs
examples/full_client/: config.rs  main.rs  tgfn.rs  thelp.rs
examples/helpers/: mod.rs  tgfn.rs  thelp.rs
examples/sample/: main.rs  proxy.rs
examples_shared/: README.md  exmlog.rs
scripts/: build_image.sh  run_docker.txt  run_in_container.sh  run_in_container_abs.sh  rust.image.Dockerfile  send_to_amip.sh
src/: api.rs  client.rs  errors.rs  handler.rs  lib.rs  listener.rs  observer.rs  rtd.rs  rtdkit.rs  tdrecv.rs  tglog.rs  tip.rs
src/api/: aasync.rs  aevent.rs  api.rs  f_authorization_state.rs  f_file.rs  f_message.rs  f_proxy.rs  function_builder.rs  mod.rs  t_authorization_state.rs  t_message.rs  t_proxy.rs
src/handler/: handler.rs  handler_receive.rs  handler_update.rs  mod.rs
src/listener/: lasync.rs  levent.rs  listener.rs  mod.rs
src/rtd/: mod.rs  tdrecv.rs
src/types/: f_authorization.rs  f_authorization_state.rs  f_chat.rs  f_chat_notification_settings.rs  f_chat_type.rs  f_connection.rs  f_connection_state.rs  f_delete_message.rs  f_file.rs  f_forward.rs  f_group.rs  f_input_file.rs  f_input_message.rs  f_invoice.rs  f_message.rs  f_message_content.rs  f_message_forward_info.rs  f_notification.rs  f_option.rs  f_profile_photo.rs  f_proxy.rs  f_reply_markup.rs  f_scope_notification_settings.rs  f_terms.rs  f_text.rs  f_text_entity_type.rs  f_update_chat_last_message.rs  f_update_file.rs  f_update_new_chat.rs  f_update_new_message.rs  f_update_option.rs  f_update_scope_notification_settings.rs  f_update_user.rs  f_update_user_status.rs  f_user.rs  f_user_type_bot.rs  mod.rs  tg_macro.rs  tgclient.rs
tests/: test_tdlib.rs
