[package]
name = "telegram-client"
version = "0.1.0"
authors = ["fewensa <fewensa@protonmail.com>"]
description = "Telegram client"
homepage = "https://github.com/fewensa/telegram-client"
repository = "https://github.com/fewensa/telegram-client"
license = "MIT"
keywords = ["tdlib", "telegram", "telegram-client", "bindings"]
categories = ["api-bindings"]
include = [
  "Cargo.toml",
  "**/*.rs",
  "**/*.tpl.rs",
  "**/*.tpl.txt",
  "**/*.tpl.toml",
  "README.md",
  "LICENSE"
]
readme = "README.md"
edition = "2018"

build = "build/build.rs"

[dependencies]

text-reader = "0.2"
rstring-builder = "0.1"
toolkit = "0.1"

rtdlib = { git = "https://github.com/fewensa/rtdlib" }
#rtdlib = "0.2.1"

serde = "1"
serde_derive = "1"
serde_json = "1"

daemon = "0.0.8"

slog = "2"
slog-term = "2"
lazy_static = "1.3.0"


error-chain-mini = "0.2.0"
error-chain-mini-derive = "0.2.0"

[dev-dependencies]
colored = "1"
regex = "1"
hostname = "0.1.5"
toml = "0.5.1"

[build-dependencies]

rstring-builder = "0.1.4"
tera = "0.11.20"

toml = "0.5"

serde = "1"
serde_derive = "1"

toolkit = "0.1.1"

case = "1.0.0"
