[package]
name = "telegram-client"
version = "0.5.0"
authors = ["fewensa <fewensa@protonmail.com>"]
description = "Telegram client"
homepage = "https://github.com/fewensa/telegram-client"
repository = "https://github.com/fewensa/telegram-client"
license = "MIT"
keywords = ["tdlib", "telegram", "telegram-client", "bindings"]
categories = ["api-bindings"]
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]
readme = "README.md"
edition = "2018"

build = "build.rs"

[dependencies]
#rtdlib = "1.5.*"
#rtdlib = { path = "../rtdlib" }
rtdlib = { git = "https://github.com/fewensa/rtdlib.git" }

log = "0.4"
regex = "1"

[dev-dependencies]
colored = "1"
regex = "1"
hostname = "0.1.5"
toml = "0.5.1"

serde = "1"
serde_derive = "1"
serde_json = "1"

simple_logger = "1.3"

toolkit = "0.1"



