[package]
name = "telegram-client"
version = "0.8.1"
authors = ["fewensa <fewensa@protonmail.com>"]
description = "Telegram client"
homepage = "https://github.com/fewensa/telegram-client"
repository = "https://github.com/fewensa/telegram-client"
license = "MIT"
keywords = ["tdlib", "telegram", "telegram-client", "bindings", "async"]
categories = ["api-bindings"]
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]
readme = "README.md"
edition = "2018"

build = "build.rs"

[dependencies]
rtdlib = { version = "=0.8.1", features = [ "sys" ] }
#rtdlib = { path = "../rtdlib", features = [ "sys" ] }
#rtdlib = { git = "https://github.com/fewensa/rtdlib.git", features = [ "sys" ] }

log = "0.4"
regex = "1"
futures = "0.3"
lazy_static = "1.4"

[dev-dependencies]
colored = "2"
regex = "1"
hostname = "0.1.5"
toml = "0.5.8"

serde = "1"
serde_derive = "1"
serde_json = "1"

simple_logger = "1.12"

toolkit = "0.1"

tokio = { version = "1.9.0", features = ["full"] }


